src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Alegreya SC", serif;
}
.text-shadow-outline {
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
}

body,
html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}
/* Hide horizontal scrollbar */
.hide-scrollbar::-webkit-scrollbar {
  display: none; /* Chrome, Safari, and Edge */
}

.hide-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

